--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,31 @@
-# Dependencies
+# dependencies
 node_modules/
 .pnp
 .pnp.js
 
-# Build outputs
-dist/
-build/
+# testing
 coverage/
 
-# Environment files
+# production
+build/
+dist/
+
+# misc
+.DS_Store
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.bak
 
-# Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-!.vscode/settings.json
 .idea
 .DS_Store
 *.suo
@@ -36,5 +34,7 @@ lerna-debug.log*
 *.sln
 *.sw?
 
-# TypeScript
-*.tsbuildinfo
+# Backup files
+*.bak
+*.bak[0-9]
+*.corrupted
